<resources>
    <string name="app_name">ShoeStoreApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijavi se!</string>
    <string name="action_sign_in_short">Prijavi se</string>
    <string name="welcome">"Dobro došli!"</string>
    <string name="invalid_username">Neispravno korisničko ime</string>
    <string name="invalid_password">Lozinka mora imati >5 znakova</string>
    <string name="login_failed">"Neuspješna prijava"</string>
    <string name="title_activity_firebase_uiactivity">FirebaseUIActivity</string>
    <string name="don_t_have_an_account">Nemaš račun?</string>
    <string name="register">Potvrdi</string>
    <string name="enter_your_details">Unesi svoje podatke.</string>
    <string name="prompt_name">Ime</string>
    <string name="prompt_lastname">Prezime</string>
    <string name="prompt_address">Adresa</string>
    <string name="prompt_city">Grad</string>
    <string name="prompt_postal_number">Poštanski broj</string>
    <string name="prompt_confirm_password">Potvrdi lozinku</string>
    <string name="cancel">Odustani</string>
    <string name="prompt_full_name">Ime i prezime</string>
    <string name="prompt_phone">Telefonski broj</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_blagajne">STATUS BLAGAJNE</string>
    <string name="status_placeholder">status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_api_key">AIzaSyBWBnuA-1Kr7CZELiV6kferKc1-0LTB9LU</string>
    <string name="drawer_layout_open">Open navigation drawer</string>
    <string name="drawer_layout_close">Close navigation drawer</string>
    <string name="forgot_password">Zaboravljena lozinka?</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="city_postal_code">Grad, poštanski broj</string>
    <string name="address">Adresa</string>
    <string name="phone_number">Broj telefona</string>
    <string name="change_account_details">Promijeni svoje podatke</string>
    <string name="logout">Odjava</string>
    <string name="save">Pohrani</string>
    <string name="myprofile">Moj profil</string>
    <string name="orderhistory">Povijest nardužbi</string>
    <string name="store_locations">Prodajna mjesta</string>
    <string name="my_complaints">Moje pritužbe</string>
    <string name="leave_customer_role">Napusti ulogu kupca</string>
    <string name="change_store">Promijeni trgovinu</string>
    <string name="go_to_employee">Prijava kao zaposlenik</string>
    <string name="go_to_webshop">Prebaci na webshop</string>
    <string name="back_to_admin">Natrag na administratora</string>
    <string name="model">Model</string>
    <string name="color">Boja</string>
    <string name="size">Veličina</string>
    <string name="Amount">Količina</string>
    <string name="price">Cijena</string>
    <string name="your_purchase_history">Vaša povijest narudžbi</string>
    <string name="order_id">ID narudžbe</string>
    <string name="confirm">Potvrdi</string>
    <string name="confirm_delivered">Potvrdi Dostavu</string>
    <string name="most_popular_products">Proizvodi prema popularnosti</string>
    <string name="most_recent_products">Proizvodi od najnovijeg</string>
    <string name="search_by_category">Pretraga po kategoriji</string>
    <string name="vasezalbe">Vaše žalbe</string>
    <string name="back">back</string>
    <string name="shoppingcart">shoppingCart</string>
    <string name="potvrda_nardudze">Potvrda nardudžbe</string>
    <string name="odaberite_nacin_placanja">Odaberite način plaćanja:</string>
    <string name="placanje_pouzecem">Plaćanje pouzećem</string>
    <string name="googlepay">GooglePay</string>
    <string name="test">test</string>
    <string name="odaberite_nacin_dostave">Odaberite način dostave</string>
    <string name="odaberite_ducan_u">Odaberite dućan u kojem želite preuzeti</string>
    <string name="provjerite_adresu_dostave">Provjerite adresu dostave</string>
    <string name="postanski_broj">Poštanski broj</string>
    <string name="grad">Grad</string>
    <string name="ukupno">Ukupno</string>
    <string name="vasa_kosarica">Vaša košarica</string>
    <string name="vasa_kosarica_je_prazna">Vaša Košarica je prazna :(</string>
    <string name="cijena">Cijena</string>
    <string name="nastavi_na_placanje">Nastavi na plaćanje</string>
    <string name="velicina">Velicina:</string>
    <string name="kolicina_ukupno">Količina ukupno:</string>
    <string name="izbri_i">Izbriši</string>
    <string name="ordercode">OrderCode</string>
    <string name="itemmodel">itemModel</string>
    <string name="complainttype">ComplaintType</string>
    <string name="coplaint">Coplaint</string>
    <string name="kupac_eli_novi_artikl">Kupac želi novi artikl</string>
    <string name="odbij">Odbij</string>
    <string name="ozna_i_kao_pro_itano">Označi kao pročitano</string>
    <string name="narud_ba_xyz">Narudžba xyz</string>
    <string name="kupac">Kupac</string>
    <string name="prihvati">Prihvati</string>
    <string name="hello">Hello</string>
    <string name="model_name_and_color">Model name and color</string>
    <string name="size_and_amount">Size and amount</string>
    <string name="price_single_order">Price</string>
    <string name="ocjeni_proizvod">Ocjeni proizvod</string>
    <string name="podnesi_pritu_bu">Podnesi pritužbu</string>
    <string name="status">Status</string>
    <string name="razlog">Razlog</string>
    <string name="trgovina">Trgovina:</string>
    <string name="message_text">Message text</string>
    <string name="veli_ina">Veličina</string>
    <string name="dodatni_opis_opcionalno">Dodatni opis (opcionalno)</string>
    <string name="shoestoreapp">shoeStoreApp</string>
    <string name="shoestoreinfo_gmail_com">shoestoreinfo@gmail.com</string>
    <string name="kupac_filler">Kupac:</string>
    <string name="starost_narud_be">Starost narudžbe:</string>
    <string name="ime_kupca">ime_kupca</string>
    <string name="starost_narudzbe">starost_narudzbe</string>
    <string name="potvrdi_caps">POTVRDI</string>
    <string name="upravljanje_nradnicima">Upravljanje\nradnicima</string>
    <string name="upravljanje_ntrgovinama">Upravljanje\ntrgovinama</string>
    <string name="upravljanje_nproizvodima">Upravljanje\nproizvodima</string>
    <string name="statistike_nposlovanja">Statistike\nPoslovanja</string>
    <string name="upravljanje_nnarud_bama">Upravljanje\nnarudžbama</string>
    <string name="upravljanje_npritu_bama">Upravljanje\npritužbama</string>
    <string name="upravljanje_ndostavama">Upravljanje\nDostavama</string>
    <string name="trenutne_nardud_be">Trenutne nardudžbe</string>
    <string name="nema_trenutnih_narud_bi">Nema trenutnih narudžbi</string>
    <string name="poslovne_statistike">Poslovne statistike</string>
    <string name="trgovina_stats">Trgovina</string>
    <string name="period">Period</string>
    <string name="datum">Datum</string>
    <string name="ukupni_promet">Ukupni promet:</string>
    <string name="albe_korisnika">Žalbe korisnika</string>
    <string name="nema_niti_jedna_nerije_ena_alba">Nema niti jedna neriješena žalba.</string>
    <string name="popis_prodaja">Popis prodaja</string>
    <string name="pretraga_inventara">Pretraga inventara</string>
    <string name="primitak_dostave">Primitak dostave</string>
    <string name="preuzimanje_nnarud_be">Preuzimanje\nnarudžbe</string>
    <string name="povrat_robe">Povrat robe</string>
    <string name="novi_ra_un">Novi račun</string>
    <string name="boja_inv">Boja</string>
    <string name="model_boja">Model-boja</string>
    <string name="cijena_space">Cijena:</string>
    <string name="dodaj_1_npredmet">Dodaj 1\npredmet</string>
    <string name="ukloni_1_npredmet">Ukloni 1\npredmet</string>
    <string name="resetiraj_nkoli_ine">Resetiraj\nkoličine</string>
    <string name="model_color">MODEL-COLOR</string>
    <string name="please_select_a_model">Please select a model</string>
    <string name="skeniraj_n_narud_bu">Skeniraj \n narudžbu</string>
    <string name="preuzmi_n_narudzbu">Preuzmi \n narudzbu</string>
    <string name="model_space">Model:</string>
    <string name="broj">Broj:</string>
    <string name="cijena_n">Cijena:\n</string>
    <string name="pregled_ra_una">Pregled računa</string>
    <string name="ukupno_caps">UKUPNO:</string>
    <string name="pregled_prodaja_za">Pregled prodaja za:</string>
    <string name="nova_trgovina">Nova trgovina</string>
    <string name="koordinate">Koordinate:</string>
    <string name="tip_trgovine">Tip trgovine:</string>
    <string name="unesite_novu_adresu">Unesite novu adresu</string>
    <string name="identifikator_trgovine">Identifikator trgovine</string>
    <string name="zaposlenici_storeid">Zaposlenici-StoreID</string>
    <string name="relokacija_trgovine">Relokacija trgovine:</string>
    <string name="adresa_space">Adresa:</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="pritu_ba_na">Pritužba na</string>
    <string name="vrsta_pritu_be">Vrsta pritužbe</string>
    <string name="elim_novi_artikl">Želim novi artikl</string>
    <string name="pritu_ba">Pritužba</string>
    <string name="opis_problema">Opis problema</string>
    <string name="po_alji">Pošalji</string>
    <string name="unesite_vlastiti_razlog">Unesite vlastiti razlog</string>
    <string name="textview">TextView</string>
    <string name="ocjena">Ocjena</string>
    <string name="recenzija">Recenzija</string>
    <string name="va_a_recenzija">Vaša recenzija</string>
    <string name="odustani">Odustani</string>
    <string name="skeniranje_nkoda">Skeniranje\nkoda</string>
    <string name="ru_no_ndodavanje">Ručno\ndodavanje</string>
    <string name="buyername">BuyerName</string>
    <string name="buyer_review">Buyer review</string>
    <string name="_4_74">4.74</string>
    <string name="dodaj">Dodaj</string>
    <string name="ime_prezime">Ime-prezime</string>
    <string name="trgovine">Trgovine:</string>
    <string name="otkaz">Otkaz</string>
    <string name="unaprijedi">Unaprijedi</string>
    <string name="popis_zaposlenika">Popis zaposlenika:</string>
    <string name="novi_zaposlenik">Novi zaposlenik</string>
    <string name="model_boja_minus">model-boja</string>
    <string name="pregled_nproizvoda">Pregled\nproizvoda</string>
    <string name="novi_nproizvod">Novi\nproizvod</string>
    <string name="itemname">ItemName</string>
    <string name="price_cap">Price</string>
    <string name="model_x">Model x</string>
    <string name="email_korisnika">email korisnika</string>
    <string name="novi_proizvod">Novi proizvod</string>
    <string name="boja">Boja:</string>
    <string name="_0_00kn">0.00kn</string>
    <string name="pritisnite_iznad_za_dodavanje_slike">(Pritisnite iznad za dodavanje slike)</string>
    <string name="model_caps">MODEL:</string>
    <string name="boja_caps">BOJA:</string>
    <string name="veli_ina_caps">VELIČINA:</string>
    <string name="cijena_caps">CIJENA:</string>
    <string name="id_ra_una">ID računa:</string>
    <string name="iznos">Iznos:</string>
    <string name="vrijeme">Vrijeme:</string>
    <string name="popis_artikala">Popis artikala:</string>
    <string name="uredi">Uredi</string>
    <string name="storniraj">Storniraj</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="artikl_je_obu_a">Artikl je obuća</string>
    <string name="definirajte_koje_veli_ine_artikla_postoje">Definirajte koje veličine artikla postoje</string>
    <string name="_1_2_3_4_brojevi_odvojeni_zarezom">1, 2, 3, 4 (BROJEVI odvojeni zarezom)</string>
    <string name="adresa">Adresa</string>
</resources>