<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.CustomerPurchaseActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potvrda_nardudze"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/paymentMethodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odaberite_nacin_placanja"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethodLabel">

        <RadioButton
            android:id="@+id/paymentPickupRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placanje_pouzecem" />

        <RadioButton
            android:id="@+id/paymentGoogleRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/googlepay"
            android:clickable="false"
            android:alpha="0.5"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/googlePayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/test"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/deliveryMethodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odaberite_nacin_dostave"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlePayLayout" />

    <Spinner
        android:id="@+id/purchaseDeliverySpinner"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryMethodLabel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purchasePickupLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseDeliverySpinner">

        <TextView
            android:id="@+id/deliveryLocationLabel"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/odaberite_ducan_u"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/deliveryLocationSpinner"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliveryLocationLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purchaseDeliveryLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchasePickupLayout">

        <TextView
            android:id="@+id/deliveryAddressLabel"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/provjerite_adresu_dostave"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/deliveryPostalEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryAddressLabel"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/postanski_broj"/>

        <EditText
            android:id="@+id/deliveryCityEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryPostalEdit"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/grad"/>

        <EditText
            android:id="@+id/deliveryAddressEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryCityEdit"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/adresa"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/purchaseTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ukupno"
        android:layout_margin="20dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseDeliveryLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/paymentCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odustani"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTotalTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/paymentConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potvrdi"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paymentCancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>