<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.StoreAddNewFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nova_trgovina"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/storeRelocationTitle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/newStoreMap"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="20dp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/newStoreCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/koordinate"
        android:layout_marginHorizontal="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/newStoreType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_trgovine"
            android:layout_marginHorizontal="20dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="1">
        <EditText
            android:id="@+id/addressToSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_novu_adresu"
            android:layout_marginRight="10dp"
            android:layout_weight="0.9"/>

        <ImageButton
            android:id="@+id/mapSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:layout_weight="0.1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/newStoreID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identifikator_trgovine"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/relocationConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potvrdi"
        android:layout_gravity="center_horizontal"
        app:icon="@drawable/ic_baseline_check_24"/>


</LinearLayout>